// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmInfoRow should match snapshot 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          some label
        </p>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Some text
    </p>
  </div>
</div>
`;

exports[`ConfirmInfoRow should match snapshot when copy is enabled 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 4px; top: 4px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          some label
        </p>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Some text
    </p>
  </div>
</div>
`;
